# prompt-quant-visualizer

./: .gitignore  BRIEF.md  Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
crates/prompt-quant-core/: Cargo.toml
crates/prompt-quant-core/benches/: tokenize.rs
crates/prompt-quant-core/src/: bpe.rs  color.rs  incremental.rs  lib.rs  vocab.rs
crates/prompt-quant-wasm/: Cargo.toml
crates/prompt-quant-wasm/src/: lib.rs
docs/: BUILD-LOG.md  INTEGRATION-NOTES.md  QA-REPORT.md  SIGN-LANGUAGE-SYNTAX.md  SPEC.md  USAGE.md  WILDCARD-1.md  WILDCARD-2.md  art-direction-aurora.md  art-direction-codex.md  metrics-spec.md
public/: index.html  style.css  token-demo.html
src/data/: index.js  metrics.js  outcome-link.js  parser.js  session-shape.js
src/tokenizer/: bridge.js  index.js  token-viz.js
src/ui/: details-panel.js  index.js  navigation.js  shape-badge.js  widget.js
src/viz/: index.js  nodes.js  paths.js  satellites.js  starmap.js
