[package]
name = "prompt-quant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPE tokenizer engine with multi-vocab support and incremental tokenization"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tokenize"
harness = false
